[project]
name = "nadl"
dynamic = ["version"]
description = "Nasy's Deep Learning Toolkit"
authors = [
    {name = "Nasy", email = "nasyxx+python@gmail.com"},
    {name = "Nasy", email = "nasyxx+dl@gmail.com"},
    {name = "Nasy", email = "nasyxx+git@gmail.com"},
]
dependencies = [
    "jax>=0.4.31",
    "numpy>=1.26.4",
    "rich>=13.8.1",
    "jaxtyping>=0.2.34",
    "optax>=0.2.3",
    "equinox>=0.11.7",
    "beartype>=0.18.5",
    "scikit-image>=0.24.0",
    "orbax-checkpoint>=0.6.4",
    "scikit-learn>=1.5.2",
    "einops>=0.8.0",
    "haliax>=1.3",
]
requires-python = ">=3.12"
readme = {content-type = "text/plain", file="readme.org"}
license = {text = "GPLv3"}

[project.optional-dependencies]
doc = [
    "mkdocs-material>=9.5.35",
    "mkdocs>=1.6.1",
    "mike>=2.1.3",
    "mkdocstrings[python]>=0.26.1",
]
mac = [
    "torch>=2.4.1; sys_platform == \"darwin\"",
    "tensorflow>=2.17.0; sys_platform == \"darwin\"",
    "tensordict>=0.5.0; sys_platform == \"darwin\"",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
version = { source = "file", path = "src/nadl/__init__.py" }

[tool.pdm.dev-dependencies]
dev = [
    "scipy>=1.14.1",
    "scikit-learn>=1.5.2",
    "ipdb>=0.13.13",
    "naipyext[all]>=0.10.0",
    "dm-tree>=0.1.8",
    "optree>=0.12.1",
]
[tool.mypy]
exclude = [
    "__pypackages__/",
    "./typings",  # for pyright autogen stubs
]

follow_imports_for_stubs = true
follow_imports = "silent"

disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false

disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false

implicit_optional = true
strict_optional = true


warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = false
warn_return_any = false
warn_unreachable = true

ignore_errors = false

allow_untyped_globals = false
allow_redefinition = false
local_partial_types = false
implicit_reexport = true
strict_equality = true
strict = true

warn_unused_configs = true
mypy_path = "./typings"

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnusedImport = false  # use ruff
reportUnknownMemberType = false

extraPaths = [
    "__pypackages__/3.12/lib",
    "src",
    "__pypackages__/3.11/lib",
]

exclude = [
    "**/__pycache__",
]

useLibraryCodeForTypes = true
